# PyTorchLab

./: .gitignore  README.md  main.py  pyproject.toml
config/_meta/: mnist_classes.yaml
config/acgan/: mnist.yaml
config/cgan/: fashionmnist.yaml  mnist.yaml
config/dcgan/: fashionmnist.yaml  mnist.yaml
config/gan/: fashionmnist.yaml  mnist.yaml
config/lenet/: fashionmnist.yaml  mnist.yaml
config/pix2pix/: facades.yaml
config/unet/: ISBI2012.yaml  birds&insects.yaml  pascal-voc2012.yaml
docs/: models.md  references.md
examples/cyclegan/: horse2zebra.yml
examples/dcgan/: mnist.yml
examples/gan/: mnist.yml
examples/lenet/: mnist.yml
examples/pix2pix/: lol.yml
examples/rrdnet/: lol.yml
examples/zerodce/: lol.yml
exps/: README.md
exps/acgan/: log.md
exps/acgan/configs/: mnist.yaml
exps/cgan/: cgan.md  cifar10.yml  fashionmnist.yaml  fashionmnist.yml  log.md  mnist.yaml  mnist.yml
exps/cgan/callback/: __init__.py  cgan.py
exps/cgan/configs/: fashionmnist.yaml  mnist.yaml
exps/cgan/model/: __init__.py  cgan.py
exps/cyclegan/: horse2zebra.yml  log.md
exps/cyclegan/configs/: horse2zebra.yaml
exps/dcgan/: cifar10.yml  dcgan.md  fashionmnist.yaml  fashionmnist.yml  log.md  mnist.yaml  mnist.yml
exps/dcgan/configs/: mnist.yaml
exps/dcgan/model/: dcgan.py
exps/gan/: cifar10.yml  fashionmnist.yaml  fashionmnist.yml  gan.md  log.md  mnist.yaml  mnist.yml
exps/gan/callback/: __init__.py  gan.py
exps/gan/configs/: fashionmnist.yaml  mnist.yaml
exps/gan/model/: gan.py
exps/lenet/: fashionmnist.yaml  fashionmnist.yml  lenet.md  lenet5_fashionmnist.yaml  lenet5_mnist.yaml  log.md  mnist.yaml  mnist.yml
exps/lenet/callback/: metrics.py
exps/lenet/configs/: mnist.yaml
exps/lenet/model/: __init__.py  lenet.py
exps/pix2pix/: facade.yml  facade_res_gen.yml  facades.yaml  log.md  lol.yml
exps/pix2pix/callback/: __init__.py  image.py  metrics.py
exps/pix2pix/configs/: edges2shoes.yaml  facades.yaml
exps/pix2pix/model/: pix2pix.py
exps/pix2pix/resnet/: facade.yml  lol.yml
exps/rrdnet/: lol.yaml
exps/unet/: log.md
exps/unet/configs/: carvana.yaml  pascal-voc2012.yaml
exps/zerodce/: log.md  lol.yaml  lol.yml
scripts/: make_gif.py  make_tests.py  mean_std.py
src/examples/gan/: gan.py
src/pytorchlab/: __init__.py  type_hint.py
src/pytorchlab/callbacks/: __init__.py  classify.py  gan.py  image.py  image_label.py  label.py  loss.py  metrics.py  segmentation.py  utils.py
src/pytorchlab/callbacks/anomaly/: __init__.py  anomaly.py  image.py
src/pytorchlab/callbacks/classfication/: __init__.py
src/pytorchlab/callbacks/generation/: __init__.py
src/pytorchlab/callbacks/image/: __init__.py  base.py  cgan.py  gan.py  image.py  utils.py
src/pytorchlab/callbacks/images/: __init__.py  cgan.py  gan.py
src/pytorchlab/callbacks/label/: __init__.py  label.py
src/pytorchlab/callbacks/loss/: __init__.py  loss.py
src/pytorchlab/callbacks/metrics/: __init__.py  classification.py  iqa.py
src/pytorchlab/callbacks/utils/: __init__.py  save_path.py
src/pytorchlab/criterions/: __init__.py  segmentation.py  weight.py
src/pytorchlab/criterions/vision/: edge.py  gradient.py  perceptual.py  ssim.py
src/pytorchlab/dataloaders/: sequence.py
src/pytorchlab/datamodules/: __init__.py  abc.py  base.py  from_datasets.py  pytorch.py  utils.py
src/pytorchlab/datasets/: __init__.py  anomaly.py  generation.py  image_pair.py  imagepair.py  segmentation.py  split.py
src/pytorchlab/lr_scheduler/: __init__.py  keeplr.py
src/pytorchlab/metrics/: segmentation.py
src/pytorchlab/models/: __init__.py  ae.py  conv.py  convolution.py  convtranspose.py
src/pytorchlab/models/gan/: gan.py  (+2 more)
src/pytorchlab/modules/: ae.py  cgan.py  gan.py  ganomaly.py  lenet.py  pix2pix.py
src/pytorchlab/transforms/: __init__.py  noise.py  segmentation.py  shape.py
src/pytorchlab/typehints/: __init__.py  callbacks.py  datasets.py  modules.py
src/pytorchlab/utils/: __init__.py  cli.py  split_dataset.py  visualize.py
tests/dataloaders/: test_sequence.py
tests/datamodules/: test_from_datasets.py  test_utils.py
tests/datamodules/vision/: test_cifar.py  test_folder.py  test_image_pair_datamodule.py  test_mnist.py
tests/datasets/: test_anomaly.py  test_image_pair.py  test_imagepair.py  test_split.py
tests/datasets/boring/: test_sequence.py
tests/datasets/classification/: test_imagefolder.py  test_mnist.py
tests/datasets/vision/: test_image_pair_dataset.py
tests/models/cgan/: test_cgan.py
tests/models/decoder/: test_convtranspose.py  test_upsample.py
tests/models/encoder/: test_conv.py  test_linear.py  test_residual.py
tests/models/encoder_decoder/: test_ae.py  test_ae_models.py
tests/models/gan/: test_gan.py
tests/models/lenet/: test_lenet.py
tests/modules/: test_ae.py  test_ae_modules.py  test_cgan.py  test_gan.py  test_ganomaly.py  test_lenet.py  test_pix2pix.py
tests/modules/autoencoder/: test_ae.py  test_components.py
tests/transforms/: test_noise.py
tests/transforms/image/: test_noise.py  test_transform.py
(+138 files in other folders)
