[project]
name = "PyTorchLab"
version = "0.0.1"
description = "Realize code in AI field with PyTorch and Lightning."
authors = [{ name = "TaoChenyue", email = "chenyue.Tao@qq.com" }]
dependencies = [
    "torch>=2.0.1",
    "lightning[extra]>=2.1.2",
    "tensorboard>=2.15.1",
    "torchmetrics>=1.2.0",
]
requires-python = ">=3.10,<3.12"
readme = "README.md"
license = { text = "GPLv3" }
# select from https://pypi.org/classifiers/
classifiers = [
    "Private :: Do Not Upload",
    "Development Status :: 1 - Planning",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "License :: OSI Approved :: MIT License",
    "Environment :: GPU :: NVIDIA CUDA",
]

[project.urls]
Repository = "https://github.com/TaoChenyue/PyTorchLab"
# Homepage = ""
# Documentation = ""
# Changelog = ""

[project.optional-dependencies]
vision = [
    "torchvision>=0.16.1",
    "opencv-python>=4.8.1.78",
    "opencv-python-headless>=4.8.1.78",
]
audio = ["torchaudio>=2.1.1"]
text = ["torchtext>=0.16.1"]
docs = [
    "mkdocstrings-python>=1.7.5",
]
test = [
    "pytest>=7.4.3",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = ["black>=23.7.0", "isort>=5.12.0", "autoflake>=2.2.1"]

[tool.pdm.scripts]
autoflake = { cmd = [
    "autoflake",
    "--remove-all-unused-imports",
    "--ignore-init-module-imports",
    "--in-place",
    "-r",
    "src/",
    "tests/",
] }
black = "black src/ tests/"
isort = "isort src/ tests/"
format = { composite = ["autoflake", "black", "isort"] }
