[project]
name = "PyTorchLab"
version = "0.0.1"
description = "Realize code in AI field with PyTorch and Lightning."
authors = [{ name = "TaoChenyue", email = "chenyue.Tao@qq.com" }]
dependencies = [
    "lightning[extra]==2.1.*",
    "torch>=1.12,<=2.1",
    "torchvision>=0.13,<=0.16",
    "torchaudio>=0.12,<=2.1.2",
    "torchmetrics>=0.7.0",
    "tensorboard>=2.15.1",
    "torchsummary>=1.5.1",
]
requires-python = ">=3.10,<=3.11"
readme = "README.md"
license = { text = "GPLv3" }
# select from https://pypi.org/classifiers/
classifiers = [
    "Private :: Do Not Upload",
    "Development Status :: 1 - Planning",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "License :: OSI Approved :: MIT License",
    "Environment :: GPU :: NVIDIA CUDA",
]

[project.urls]
Repository = "https://github.com/TaoChenyue/PyTorchLab"
# Homepage = ""
# Documentation = ""
# Changelog = ""

[project.optional-dependencies]
vision = ["opencv-python>=4.8.1.78", "opencv-python-headless>=4.8.1.78"]
audio = []
deploy = ["onnx>=1.15.0", "onnxruntime-gpu>=1.16.3"]
tools = ["grad-cam>=1.5.0"]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "black>=23.7.0",
    "isort>=5.12.0",
    "autoflake>=2.2.1",
    "torch-tb-profiler>=0.4.3",
]

[tool.pdm.scripts]
autoflake = { cmd = [
    "autoflake",
    "--remove-all-unused-imports",
    "--ignore-init-module-imports",
    "--in-place",
    "-r",
] }
format = { composite = [
    "echo autoflake {args}",
    "autoflake {args}",
    "echo autoflake done",
    "echo isort {args}",
    "isort {args}",
    "echo isort done",
    "echo black {args}",
    "black {args}",
    "echo black done",
] }