[project]
name = "PyTorchLab"
version = "0.0.2.dev"
description = "Realize code in AI field with PyTorch and Lightning."
authors = [{ name = "TaoChenyue", email = "chenyue.Tao@qq.com" }]
dependencies = [
    "lightning[pytorch-extra]>=2.1.4",
    "torch>=1.12",
    "torchvision>=0.13",
    "torchaudio>=0.12",
    "torchmetrics>=0.7.0",
    "tensorboard>=2.15.1",
    "opencv-python>=4.9.0.80",
    "opencv-python-headless>=4.9.0.80",
]
requires-python = ">=3.10,<=3.11"
readme = "README.md"
license = { text = "GPLv3" }
# select from https://pypi.org/classifiers/
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "License :: OSI Approved :: MIT License",
    "Environment :: GPU :: NVIDIA CUDA",
]

[project.urls]
Repository = "https://github.com/TaoChenyue/PyTorchLab"
# Homepage = ""
# Documentation = ""
# Changelog = ""

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "black>=23.7.0",
    "isort>=5.12.0",
    "autoflake>=2.2.1",
]

[tool.pdm.scripts]
format = { composite = [
    "autoflake --remove-all-unused-imports --ignore-init-module-imports --in-place -r {args}",
    "isort {args}",
    "black {args}",
] }

[project.scripts]
pytorchlab = "pytorchlab.utils.cli:cli"